--- a/css/helper/primefaces.css
+++ b/css/helper/primefaces.css
@@ -45,6 +45,10 @@
 .p-dialog .p-confirm-dialog .p-confirm-dialog-icon {
   font-size: 300%;
 }
+.p-dialog .p-dialog-header {
+  border-top-left-radius: inherit;
+  border-top-right-radius: inherit;
+}
 .p-dialog .p-dialog-header .p-dialog-header-close:hover {
   color: var(--danger) !important;
 }
@@ -73,7 +77,16 @@
 }
 
 .p-overlaypanel {
+  display: flex;
+  flex-direction: column;
+  max-width: 100%;
+  max-height: 100%;
   z-index: 1 !important;
+}
+.p-overlaypanel .p-overlaypanel-content {
+  display: flex;
+  flex-direction: column;
+  min-height: 100%;
 }
 
 .p-toast {
@@ -90,6 +103,9 @@
   font-size: unset;
 }
 
+.p-inputtext {
+  width: 100%;
+}
 .p-inputtext:enabled {
   margin-bottom: 0;
 }
@@ -148,11 +164,20 @@ p-chart canvas {
   padding: 0;
 }
 
-.p-accordion:not(.default) .p-accordion-header-link {
-  padding: 0.75rem;
+.p-panel > :first-child {
+  border-top-left-radius: inherit !important;
+  border-top-right-radius: inherit !important;
 }
-.p-accordion:not(.default) .p-accordion-content {
-  padding: 0;
+.p-panel > :last-child {
+  border-bottom-left-radius: inherit !important;
+  border-bottom-right-radius: inherit !important;
+}
+.p-panel + .p-panel {
+  margin-top: 1rem;
+}
+
+.p-accordion .p-accordion-header-link {
+  border-radius: inherit !important;
 }
 
 .p-carousel {
@@ -218,9 +243,21 @@ p-chart canvas {
     right: 0.5rem !important;
   }
 }
+.p-message .p-message-icon {
+  margin-right: 1rem;
+}
+
 .p-toast .p-toast-message .p-toast-icon-close {
   min-width: 2rem;
   border: none !important;
+}
+
+.p-selectbutton {
+  display: flex;
+}
+.p-selectbutton > .p-button {
+  width: 100%;
+  padding: 1rem;
 }
 
 .p-button {
@@ -234,296 +271,6 @@ p-chart canvas {
 
 .p-hidden-accessible {
   display: none;
-}
-
-.p-toast-message-default {
-  background-color: var(--default) !important;
-  color: var(--default-c) !important;
-}
-
-.p-badge-default {
-  background-color: var(--default) !important;
-  color: var(--default-c) !important;
-}
-
-.p-toast-message-accent {
-  background-color: var(--accent) !important;
-  color: var(--accent-c) !important;
-}
-
-.p-badge-accent {
-  background-color: var(--accent) !important;
-  color: var(--accent-c) !important;
-}
-
-.p-toast-message-primary {
-  background-color: var(--primary) !important;
-  color: var(--primary-c) !important;
-}
-
-.p-badge-primary {
-  background-color: var(--primary) !important;
-  color: var(--primary-c) !important;
-}
-
-.p-toast-message-secondary {
-  background-color: var(--secondary) !important;
-  color: var(--secondary-c) !important;
-}
-
-.p-badge-secondary {
-  background-color: var(--secondary) !important;
-  color: var(--secondary-c) !important;
-}
-
-.p-toast-message-white {
-  background-color: var(--white) !important;
-  color: var(--white-c) !important;
-}
-
-.p-badge-white {
-  background-color: var(--white) !important;
-  color: var(--white-c) !important;
-}
-
-.p-toast-message-light {
-  background-color: var(--light) !important;
-  color: var(--light-c) !important;
-}
-
-.p-badge-light {
-  background-color: var(--light) !important;
-  color: var(--light-c) !important;
-}
-
-.p-toast-message-black {
-  background-color: var(--black) !important;
-  color: var(--black-c) !important;
-}
-
-.p-badge-black {
-  background-color: var(--black) !important;
-  color: var(--black-c) !important;
-}
-
-.p-toast-message-dark {
-  background-color: var(--dark) !important;
-  color: var(--dark-c) !important;
-}
-
-.p-badge-dark {
-  background-color: var(--dark) !important;
-  color: var(--dark-c) !important;
-}
-
-.p-toast-message-silver {
-  background-color: var(--silver) !important;
-  color: var(--silver-c) !important;
-}
-
-.p-badge-silver {
-  background-color: var(--silver) !important;
-  color: var(--silver-c) !important;
-}
-
-.p-toast-message-gold {
-  background-color: var(--gold) !important;
-  color: var(--gold-c) !important;
-}
-
-.p-badge-gold {
-  background-color: var(--gold) !important;
-  color: var(--gold-c) !important;
-}
-
-.p-toast-message-info {
-  background-color: var(--info) !important;
-  color: var(--info-c) !important;
-}
-
-.p-badge-info {
-  background-color: var(--info) !important;
-  color: var(--info-c) !important;
-}
-
-.p-toast-message-error {
-  background-color: var(--error) !important;
-  color: var(--error-c) !important;
-}
-
-.p-badge-error {
-  background-color: var(--error) !important;
-  color: var(--error-c) !important;
-}
-
-.p-toast-message-failed {
-  background-color: var(--failed) !important;
-  color: var(--failed-c) !important;
-}
-
-.p-badge-failed {
-  background-color: var(--failed) !important;
-  color: var(--failed-c) !important;
-}
-
-.p-toast-message-danger {
-  background-color: var(--danger) !important;
-  color: var(--danger-c) !important;
-}
-
-.p-badge-danger {
-  background-color: var(--danger) !important;
-  color: var(--danger-c) !important;
-}
-
-.p-toast-message-success {
-  background-color: var(--success) !important;
-  color: var(--success-c) !important;
-}
-
-.p-badge-success {
-  background-color: var(--success) !important;
-  color: var(--success-c) !important;
-}
-
-.p-toast-message-successful {
-  background-color: var(--successful) !important;
-  color: var(--successful-c) !important;
-}
-
-.p-badge-successful {
-  background-color: var(--successful) !important;
-  color: var(--successful-c) !important;
-}
-
-.p-toast-message-warn {
-  background-color: var(--warn) !important;
-  color: var(--warn-c) !important;
-}
-
-.p-badge-warn {
-  background-color: var(--warn) !important;
-  color: var(--warn-c) !important;
-}
-
-.p-toast-message-warning {
-  background-color: var(--warning) !important;
-  color: var(--warning-c) !important;
-}
-
-.p-badge-warning {
-  background-color: var(--warning) !important;
-  color: var(--warning-c) !important;
-}
-
-.p-toast-message-pending {
-  background-color: var(--pending) !important;
-  color: var(--pending-c) !important;
-}
-
-.p-badge-pending {
-  background-color: var(--pending) !important;
-  color: var(--pending-c) !important;
-}
-
-.p-toast-message-pink {
-  background-color: var(--pink) !important;
-  color: var(--pink-c) !important;
-}
-
-.p-badge-pink {
-  background-color: var(--pink) !important;
-  color: var(--pink-c) !important;
-}
-
-.p-toast-message-orange {
-  background-color: var(--orange) !important;
-  color: var(--orange-c) !important;
-}
-
-.p-badge-orange {
-  background-color: var(--orange) !important;
-  color: var(--orange-c) !important;
-}
-
-.p-toast-message-purple {
-  background-color: var(--purple) !important;
-  color: var(--purple-c) !important;
-}
-
-.p-badge-purple {
-  background-color: var(--purple) !important;
-  color: var(--purple-c) !important;
-}
-
-.p-toast-message-green {
-  background-color: var(--green) !important;
-  color: var(--green-c) !important;
-}
-
-.p-badge-green {
-  background-color: var(--green) !important;
-  color: var(--green-c) !important;
-}
-
-.p-toast-message-red {
-  background-color: var(--red) !important;
-  color: var(--red-c) !important;
-}
-
-.p-badge-red {
-  background-color: var(--red) !important;
-  color: var(--red-c) !important;
-}
-
-.p-toast-message-blue {
-  background-color: var(--blue) !important;
-  color: var(--blue-c) !important;
-}
-
-.p-badge-blue {
-  background-color: var(--blue) !important;
-  color: var(--blue-c) !important;
-}
-
-.p-toast-message-yellow {
-  background-color: var(--yellow) !important;
-  color: var(--yellow-c) !important;
-}
-
-.p-badge-yellow {
-  background-color: var(--yellow) !important;
-  color: var(--yellow-c) !important;
-}
-
-.p-toast-message-muted {
-  background-color: var(--muted) !important;
-  color: var(--muted-c) !important;
-}
-
-.p-badge-muted {
-  background-color: var(--muted) !important;
-  color: var(--muted-c) !important;
-}
-
-.p-toast-message-color-1 {
-  background-color: var(--color-1) !important;
-  color: var(--color-1-c) !important;
-}
-
-.p-badge-color-1 {
-  background-color: var(--color-1) !important;
-  color: var(--color-1-c) !important;
-}
-
-.p-toast-message-color-2 {
-  background-color: var(--color-2) !important;
-  color: var(--color-2-c) !important;
-}
-
-.p-badge-color-2 {
-  background-color: var(--color-2) !important;
-  color: var(--color-2-c) !important;
 }
 
 /*# sourceMappingURL=primefaces.css.map */
