--- a/css/sizes.css
+++ b/css/sizes.css
@@ -82,6 +82,10 @@
   gap: 1rem;
 }
 
+.rounded-1 {
+  border-radius: 0.2rem !important;
+}
+
 .h-2 {
   height: 2rem !important;
 }
@@ -155,6 +159,10 @@
 
 .gap-2 {
   gap: 2rem;
+}
+
+.rounded-2 {
+  border-radius: 0.4rem !important;
 }
 
 .h-3 {
@@ -232,6 +240,10 @@
   gap: 3rem;
 }
 
+.rounded-3 {
+  border-radius: 0.6rem !important;
+}
+
 .h-4 {
   height: 4rem !important;
 }
@@ -305,6 +317,10 @@
 
 .gap-4 {
   gap: 4rem;
+}
+
+.rounded-4 {
+  border-radius: 0.8rem !important;
 }
 
 .h-5 {
@@ -382,6 +398,10 @@
   gap: 5rem;
 }
 
+.rounded-5 {
+  border-radius: 1rem !important;
+}
+
 .h-6 {
   height: 6rem !important;
 }
@@ -455,6 +475,10 @@
 
 .gap-6 {
   gap: 6rem;
+}
+
+.rounded-6 {
+  border-radius: 1.2rem !important;
 }
 
 .h-7 {
@@ -532,6 +556,10 @@
   gap: 7rem;
 }
 
+.rounded-7 {
+  border-radius: 1.4rem !important;
+}
+
 .h-8 {
   height: 8rem !important;
 }
@@ -605,6 +633,10 @@
 
 .gap-8 {
   gap: 8rem;
+}
+
+.rounded-8 {
+  border-radius: 1.6rem !important;
 }
 
 .h-9 {
@@ -682,6 +714,10 @@
   gap: 9rem;
 }
 
+.rounded-9 {
+  border-radius: 1.8rem !important;
+}
+
 .h-10 {
   height: 10rem !important;
 }
@@ -755,6 +791,10 @@
 
 .gap-10 {
   gap: 10rem;
+}
+
+.rounded-10 {
+  border-radius: 2rem !important;
 }
 
 .h-0 {
@@ -832,6 +872,22 @@
   gap: 0;
 }
 
+.pt-0 {
+  padding-top: 0;
+}
+
+.pr-0 {
+  padding-right: 0;
+}
+
+.pb-0 {
+  padding-bottom: 0;
+}
+
+.pl-0 {
+  padding-left: 0;
+}
+
 .h-25 {
   height: 25% !important;
 }
@@ -905,6 +961,22 @@
 
 .gap-25 {
   gap: 25%;
+}
+
+.pt-25 {
+  padding-top: 25%;
+}
+
+.pr-25 {
+  padding-right: 25%;
+}
+
+.pb-25 {
+  padding-bottom: 25%;
+}
+
+.pl-25 {
+  padding-left: 25%;
 }
 
 .h-50 {
@@ -982,6 +1054,22 @@
   gap: 50%;
 }
 
+.pt-50 {
+  padding-top: 50%;
+}
+
+.pr-50 {
+  padding-right: 50%;
+}
+
+.pb-50 {
+  padding-bottom: 50%;
+}
+
+.pl-50 {
+  padding-left: 50%;
+}
+
 .h-75 {
   height: 75% !important;
 }
@@ -1057,6 +1145,22 @@
   gap: 75%;
 }
 
+.pt-75 {
+  padding-top: 75%;
+}
+
+.pr-75 {
+  padding-right: 75%;
+}
+
+.pb-75 {
+  padding-bottom: 75%;
+}
+
+.pl-75 {
+  padding-left: 75%;
+}
+
 .h-100 {
   height: 100% !important;
 }
@@ -1130,6 +1234,22 @@
 
 .gap-100 {
   gap: 100%;
+}
+
+.pt-100 {
+  padding-top: 100%;
+}
+
+.pr-100 {
+  padding-right: 100%;
+}
+
+.pb-100 {
+  padding-bottom: 100%;
+}
+
+.pl-100 {
+  padding-left: 100%;
 }
 
 .h-unset {
@@ -7286,38 +7406,38 @@
     gap: auto;
   }
 }
-.h1,
 h1,
+.h1,
 .font-5 {
   font-size: 200%;
 }
 
-.h2,
 h2,
+.h2,
 .font-4 {
   font-size: 180%;
 }
 
-.h3,
 h3,
+.h3,
 .font-3 {
   font-size: 160%;
 }
 
-.h4,
 h4,
+.h4,
 .font-2 {
   font-size: 140%;
 }
 
-.h5,
 h5,
+.h5,
 .font-1 {
   font-size: 120%;
 }
 
-.h6,
 h6,
+.h6,
 .font-0 {
   font-size: 100%;
 }
