--- a/styles/helper/primefaces.scss
+++ b/styles/helper/primefaces.scss
@@ -60,6 +60,9 @@
   }
 
   .p-dialog-header {
+    border-top-left-radius: inherit;
+    border-top-right-radius: inherit;
+
     .p-dialog-header-close:hover {
       color: var(--danger) !important;
     }
@@ -96,7 +99,17 @@
 }
 
 .p-overlaypanel {
+  display: flex;
+  flex-direction: column;
+  max-width: 100%;
+  max-height: 100%;
   z-index: 1 !important;
+
+  .p-overlaypanel-content {
+    display: flex;
+    flex-direction: column;
+    min-height: 100%;
+  }
 }
 
 .p-toast {
@@ -113,11 +126,15 @@
   font-size: unset;
 }
 
-.p-inputtext:enabled {
-  margin-bottom: 0;
+.p-inputtext {
+  width: 100%;
 
-  :hover {
-    border-color: unset;
+  &:enabled {
+    margin-bottom: 0;
+
+    :hover {
+      border-color: unset;
+    }
   }
 }
 
@@ -182,14 +199,38 @@ p-chart {
   }
 }
 
-.p-accordion:not(.default) {
-  .p-accordion-header-link {
-    padding: 0.75rem;
+.p-panel {
+  > {
+    :first-child {
+      border-top-left-radius: inherit !important;
+      border-top-right-radius: inherit !important;
+    }
+
+    :last-child {
+      border-bottom-left-radius: inherit !important;
+      border-bottom-right-radius: inherit !important;
+    }
   }
 
-  .p-accordion-content {
-    padding: 0;
+  &+.p-panel {
+    margin-top: 1rem;
   }
+}
+
+.p-accordion {
+  .p-accordion-header-link {
+    border-radius: inherit !important;
+  }
+
+  // &:not(.default) {
+  //   .p-accordion-header-link {
+  //     padding: 0.75rem;
+  //   }
+
+  //   .p-accordion-content {
+  //     padding: 0;
+  //   }
+  // }
 }
 
 .p-carousel {
@@ -273,10 +314,25 @@ p-chart {
   }
 }
 
+.p-message {
+  .p-message-icon {
+    margin-right: 1rem;
+  }
+}
+
 .p-toast .p-toast-message {
   .p-toast-icon-close {
     min-width: 2rem;
     border: none !important;
+  }
+}
+
+.p-selectbutton {
+  display: flex;
+
+  >.p-button {
+    width: 100%;
+    padding: 1rem;
   }
 }
 
@@ -295,15 +351,15 @@ p-chart {
   display: none;
 }
 
-@each $color,
-$colorValue in $app-colors-mapped {
-  .p-toast-message-#{$color} {
-    background-color: var(--#{$color}) !important;
-    color: var(--#{$color}-c) !important;
-  }
+// @each $color,
+// $colorValue in $app-colors-mapped {
+//   .p-toast-message-#{$color} {
+//     background-color: var(--#{$color}) !important;
+//     color: var(--#{$color}-c) !important;
+//   }
 
-  .p-badge-#{$color} {
-    background-color: var(--#{$color}) !important;
-    color: var(--#{$color}-c) !important;
-  }
-}
+//   .p-badge-#{$color} {
+//     background-color: var(--#{$color}) !important;
+//     color: var(--#{$color}-c) !important;
+//   }
+// }
