--- a/styles/variables.scss
+++ b/styles/variables.scss
@@ -23,7 +23,7 @@
 }
 
 @media (max-width:575.98px) {
-  :root {
+  body {
     // --font-size: calc(#{$font-size} / 1.125);
     --font-size: calc(var(--font-size) - 100rem);
     // --font-size: 0.725rem;
